[project]
name = "comfyui_private_postprocessor"
description = "Nodes:Private ImageCPostprocessor"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/githubYiheng/comfyui_private_postprocessor"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_private_postprocessor"
Icon = ""
